--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
-=======
-/server/
->>>>>>> branch 'master' of https://github.com/paweljakubwojcik/Messenger.git
 /client/
+/server/
+/graphics/
